# embed-test

./: .gitignore  CMakeLists.txt  build.py  data.c  deps.json  jmetadata.py  myapp.cpp  mymath.cpp  mymath.h  myphsx.cpp  myphsx.h
